# PanicKiller

./: Cargo.toml  README.md
src/bootstrap/src/core/: builder.rs
src/bootstrap/src/core/build_steps/: tool.rs
src/librustdoc/: Cargo.toml  lib.rs
src/librustdoc/panickiller/: mod.rs  utils.rs
src/librustdoc/panickiller/database/: mod.rs
src/librustdoc/panickiller/fault_localization/: extract.rs  graph.rs  rank.rs
src/librustdoc/panickiller/patch_generation/: patch.rs  patterns.rs  rank.rs  text_similarity.py
src/librustdoc/panickiller/patch_validation/: validation.rs
src/tools/panickiller/: Cargo.toml  main.rs
