[package]
name = "rustdoc"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
askama = { version = "0.12", default-features = false, features = ["config"] }
base64 = "0.21.7"
itertools = "0.12"
indexmap = "2"
minifier = "0.3.0"
pulldown-cmark-old = { version = "0.9.6", package = "pulldown-cmark", default-features = false }
regex = "1"
rustdoc-json-types = { path = "../rustdoc-json-types" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.8.1"
tempfile = "3"
tracing = "0.1"
tracing-tree = "0.3.0"
threadpool = "1.8.1"
diesel = { version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15"
syn = {version = "2.0.50", features = ["full", "visit", "visit-mut", "parsing"]}
proc-macro2 = { version = "1", features = ["span-locations"] }
prettyplease = "0.2.16"
rand = "0.8.5"

[dependencies.pyo3]
version = "0.20.3"
features = ["auto-initialize"]

[dependencies.tracing-subscriber]
version = "0.3.3"
default-features = false
features = ["fmt", "env-filter", "smallvec", "parking_lot", "ansi"]

[dev-dependencies]
expect-test = "1.4.0"

[features]
jemalloc = []

[package.metadata.rust-analyzer]
rustc_private = true
