[package]
name = "panickiller"
version = "0.1.0"
authors = ["lzx <ciciliuzixi12@gmail.com>", "yunboni <yunboni@smail.nju.edu.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdoc = { path = "../../librustdoc" }

[[bin]]
name = "panickiller"
path = "main.rs"
